--- a/ios-developer.html
+++ b/ios-developer.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light">Copenhagen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=Cdrxoty0M_'>8x8 - Sr. iOS Mobile Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via=Cdrxoty0M_'>8x8 - Sr. iOS Mobile Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -151,7 +151,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nimble.recruitee.com/o/senior-ios-developer-7'>
+<h5><a href='https://nimble.recruitee.com/o/senior-ios-developer-7'>
       Senior iOS Developer - Nimble
     </a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
@@ -213,7 +213,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://georgelabs.recruitee.com/o/ios-developer-fmd-for-george'>
       iOS Developer (f/m/d) for George - George Labs GmbH
     </a></h5> 
 <p><span class="badge badge-light">Vienna</span></p>
@@ -357,7 +357,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -366,7 +366,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Northern Ostrobothnia, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://oura-health-ltd.workable.com/j/4F5BC08628'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oura-health-ltd.workable.com/j/4F5BC08628'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Helsinki, Uusimaa, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -395,7 +395,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
+<h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 25, 2019 ... Senior iOS Developer (SDEIII). Toronto, Ontario, Canada. Engineering ? 
 Software Development. Full-time. Apply for this job. TradeRev is an online 
@@ -433,7 +433,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
